--- a/Frontend/HTML_Files/index.html
+++ b/Frontend/HTML_Files/index.html
@@ -2,36 +2,42 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width-device-width, initial-scale-1.0">
     <title>Ethical Developers</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="../CSS_Files/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <nav id="main-navbar">
+    <nav class="main-navbar">
     <ul>
-      <li><i class="fas fa-comments fa-2x" aria-hidden="true"></i>  <a href="#">Chat</a></li>
-      <li><i class="fa fa-euro-sign fa-2x" aria-hidden="true"></i> <a href="#">100</a></li>
-      <li><i class="fa fa-fire fa-2x" aria-hidden="true"> </i><a href="#"> 0</a></li>
-      <li><a href="#">Daily Goal 50/75</a></li>
-      <li><a href="#">Name   </a><i class="fas fa-user-circle fa-2x"></i></li>
+      <li id="chat"><a href="https://discord.gg/phu2YawKSA"> <i class="fas fa-comments fa-2x" aria-hidden="true"></i>Chat</a></li>
+      <li id="points"> <a href="#"><i class="fa fa-euro-sign fa-2x" aria-hidden="true"></i>100</a></li>
+      <li id="streak"><a href="#"><i class="fa fa-fire fa-2x" aria-hidden="true"> </i> 0</a></li>
+      <li id="daily_goal"><a href="#">Daily Goal 50/75</a></li>
+      <li id="profile"><span>user_name</span><a href="#"> <i class="fas fa-user-circle fa-2x"></i></a></li>
     </ul>
   </nav>
     <div class="sidebar">
      <div class="icons">
         <center>
-      <img src="../../images/Logos/logo.jpeg" alt="logo" width="60" height="60"><br>  <br><br><br><br>
+      <img id="logo" src="../../images/Logos/logo.jpeg" alt="logo" ><br>  <br><br><br><br>
       <i class="fa fa-home fa-2x" aria-hidden="true"></i>          <br><br><br><br>
       <i class="fa fa-tasks fa-2x" aria-hidden="true"></i>         <br><br><br><br>
       <i class="fa fa-sticky-note fa-2x" aria-hidden="true"></i>   <br><br><br><br>
       <i class="fa fa-star fa-2x" aria-hidden="true"></i>          <br><br><br><br>
       <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>      <br><br><br><br>
       <i class="fa fa-trophy fa-2x" aria-hidden="true"></i>        <br><br><br><br>
-      <div class="team_icon">
-      <i class="fa fa-male fa-1x" aria-hidden="true"></i>
-      <i class="fa fa-male fa-2x" aria-hidden="true"></i>
-      <i class="fa fa-male fa-1x" aria-hidden="true"></i><br></div>
         </center>
-      </div>
+        </div>
+        <center>
+        <div class="team_icon">
+        <i class="fa fa-male fa-1x" aria-hidden="true"></i>
+        <i class="fa fa-male fa-2x" aria-hidden="true"></i>
+        <i class="fa fa-male fa-1x" aria-hidden="true"></i><br></div>
+      </center>
     </div>
 <footer>
   <div class="social_icons">
@@ -41,16 +47,17 @@
   <a href="#" target="_blank">  <i class="fab fa-whatsapp fa-lg"></i>  <a>
   <a href="#" target="_blank">  <i class="fab fa-twitter fa-lg"></i> </a>
   <a href="https://www.linkedin.com/company/ethical-developers" target="_blank"> <i class="fab fa-linkedin fa-lg"></i> </a>
-  <br>
+</cemter>
+  </div>
+<div class="bottom_bar">
+  <center>
   <a href="#">Home</a> |
   <a href="#">About Us</a> |
   <a href="#">Contact Us</a> |
   <a href="#">Privacy Policy</a>
-  <br>
   <div id="text_footer"> Do not copy All Rights Reserved </div>
-
   </center>
-  </div>
+</div>
 </footer>
 
 
