--- a/Frontend/HTML_Files/index.html
+++ b/Frontend/HTML_Files/index.html
@@ -23,13 +23,13 @@
     <div class="sidebar">
      <div class="icons">
         <center>
-      <img id="logo" src="../../images/Logos/logo.jpeg" alt="logo" ><br>  <br><br><br><br>
-      <i class="fa fa-home fa-2x" aria-hidden="true"></i>          <br><br><br><br>
-      <i class="fa fa-tasks fa-2x" aria-hidden="true"></i>         <br><br><br><br>
-      <i class="fa fa-sticky-note fa-2x" aria-hidden="true"></i>   <br><br><br><br>
-      <i class="fa fa-star fa-2x" aria-hidden="true"></i>          <br><br><br><br>
-      <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>      <br><br><br><br>
-      <i class="fa fa-trophy fa-2x" aria-hidden="true"></i>        <br><br><br><br>
+      <img id="logo" src="../../images/Logos/logo.jpeg" alt="logo"> <br><br><br><br><br>
+      <i class="fa fa-home fa-2x" aria-hidden="true"></i>           <br><br><br><br>
+      <i class="fa fa-tasks fa-2x" aria-hidden="true"></i>          <br><br><br><br>
+      <i class="fa fa-sticky-note fa-2x" aria-hidden="true"></i>    <br><br><br><br>
+      <i class="fa fa-star fa-2x" aria-hidden="true"></i>           <br><br><br><br>
+      <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>       <br><br><br><br>
+      <i class="fa fa-trophy fa-2x" aria-hidden="true"></i>         <br><br><br><br>
         </center>
         </div>
         <center>
@@ -47,7 +47,7 @@
   <a href="#" target="_blank">  <i class="fab fa-whatsapp fa-lg"></i>  <a>
   <a href="#" target="_blank">  <i class="fab fa-twitter fa-lg"></i> </a>
   <a href="https://www.linkedin.com/company/ethical-developers" target="_blank"> <i class="fab fa-linkedin fa-lg"></i> </a>
-</cemter>
+</center>
   </div>
 <div class="bottom_bar">
   <center>
