fixed the chatbox

--- a/Frontend/HTML_Files/chat_screen.html
+++ b/Frontend/HTML_Files/chat_screen.html
@@ -5,7 +5,7 @@
     <title> chatscreen</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="chat_screen.css">
+    <link rel="stylesheet" href="../CSS_Files/chat_screen.css">
   </head>
   <body>
 
@@ -42,12 +42,14 @@
     <p class="chat-friend">Web development is the work involved in developing a Web site for the Internet (World Wide Web) or an intranet (a private network).[1] Web development can range from developing a simple single static page of plain text to complex Web-based Internet applications (Web apps), electronic businesses, and social network services. A more comprehensive list of tasks to which Web development commonly refers, may include Web engineering, Web design, Web content development, client liaison, client-side/server-side scripting, Web server and network security configuration, and e-commerce development.</p>
 </div>
 
-<div class ="msg-bottom">
-<i class="fa fa-camera fa-lg"></i>
-<i class="fa fa-smile fa-lg" ></i>
-<input id="text-box" type="text" class ="form-control" placeholder="write message..">
-<i class="fa fa-paper-plane"></i>
-</div>
+<footer class ="msg-bottom" id="hello">
+  <ul>
+  <li><button><i class="fa fa-camera fa-lg"></i></button></li>
+  <li><button><i class="fa fa-smile fa-lg" ></i> </button></li>
+  <li><input id="text-box" type="text" class ="form-control" placeholder="write message.."></li>
+    <li><button><i class="fa fa-paper-plane"></i></button></li>
+</ul>
+</footer>
 
 
 
