--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <nav class="main-navbar">
     <ul>
       <li id="batch">Batch: <br><span>2019-23</span></li>
+      <li id="search_bar"> <input type="text" placeholder="Search...."></li>
       <li id="chat"><a href="Frontend/HTML_Files/chat_screen.html"> <i class="fas fa-comments fa-2x" aria-hidden="true"></i>Chat</a></li>
       <li id="points"> <a href="#"><i class="fa fa-euro-sign fa-2x" aria-hidden="true"></i>100</a></li>
       <li id="streak"><a href="#"><i class="fa fa-fire fa-2x" aria-hidden="true"> </i> 0</a></li>
@@ -24,7 +25,6 @@
   </nav>
     <div class="sidebar">
      <div class="icons">
-        <center>
         <center>
       <img id="logo" src="images/Logos/logo.jpeg" alt="logo"> <br><br><br><br><br>
       <i class="fa fa-home fa-2x" aria-hidden="true"></i>           <br><br><br><br>
