--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="sidebar">
      <div class="icons">
         <center>
-      <img id="logo" class="l1 animate__animated animate__bounce" src="images/Logos/logo.jpeg" alt="logo"> <br><br><br><br><br>
+      <img id="logo" class="animate__animated animate__bounce" src="images/Logos/logo.jpeg" alt="logo"> <br><br><br><br><br>
       <i class="fa fa-home fa-2x" aria-hidden="true"></i>           <br><br><br><br>
       <i class="fa fa-tasks fa-2x" aria-hidden="true"></i>          <br><br><br><br>
       <i class="fa fa-sticky-note fa-2x" aria-hidden="true"></i>    <br><br><br><br>
